--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
+    "react-scrollbars-custom": "^4.0.25",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.2.13",
     "styled-components": "^5.1.1",
