--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.50",
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
+    "d3-ease": "^1.0.6",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
