--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-scrollbars-custom": "^4.0.25",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.2.13",
+    "source-map-explorer": "^2.4.2",
     "styled-components": "^5.1.1",
     "three": "^0.118.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
