--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
   "include": [
     "src"
   ],
-  "exclude": [
-    "src/components/IconTester"
-  ]
+  // "exclude": [
+  //   "src/components/IconTester"
+  // ]
 }
