Added func-style: [error, expression] inside .eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["airbnb-typescript-prettier"]
+  "extends": [
+    "eslint:recommended",
+    "airbnb-typescript-prettier"
+  ],
+  "rules": {
+    "func-style": ["error", "expression"]
+  }
 }
