--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
     "d3-ease": "^1.0.6",
+    "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
