--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx}"
+    "format": "prettier src/**/*.{js,jsx,ts,tsx} --write",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
